--- a/EbanxTest.Web.API/appsettings.json
+++ b/EbanxTest.Web.API/appsettings.json
@@ -6,6 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {"DEVConn": "Server=(local)\\sqlexpress;Database=BalanceDB;Trusted_Connection=True;MultipleActiveResultSets=True;"}
+  "AllowedHosts": "*"
 }
