--- a/EbanxTest.Web.API/Properties/launchSettings.json
+++ b/EbanxTest.Web.API/Properties/launchSettings.json
@@ -1,16 +1,18 @@
 {
+  "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:25284/",
-      "sslPort": 44317
+      "applicationUrl": "http://localhost:45387",
+      "sslPort": 44368
     }
   },
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "balance",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -18,10 +20,10 @@
     "EbanxTest.Web.API": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "balance",
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      }
     }
-  }
 }
